# Stat-Terminal

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
db/: csv_sqlite.ipynb  databases.md  stat-term.db  test-stat-term.db
src/: main.cpp  nfl-main.cpp  simple-main.cpp
